@@ -1592,7 +1592,7 @@ intptr_t KeyMacro::CallFar(intptr_t CheckCode, FarMacroCall* Data)
 			return PassNumber(GetCurrentProcessId(), Data);
 
 		case MCODE_V_FAR_UPTIME:
-			return PassNumber(Global->FarUpTime(), Data);
+			return PassNumber(Global->FarUpTime()/1000, Data);
 
 		case MCODE_V_MACRO_AREA:
 			return PassNumber(GetArea(), Data);
