@@ -1,4 +1,9 @@
-﻿w17 02.02.2015 13:38:18 +0300 - build 4260
+﻿shmuel 03.02.2015 01:42:54 +0200 - build 4261
+
+1. Plugins API: добавлена стандартная функция FSF.FarClock - то же, что Far.UpTime в макросах,
+   но в микросекундах и с микросекундным разрешением. Документация следует.
+
+w17 02.02.2015 13:38:18 +0300 - build 4260
 
 1. Правки просмотрщика:
    -пара мелких багов/опечаток
